fix libraries page photo overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -948,7 +948,7 @@ h3 {
   margin: 1em 0 0 0;
 }
 
-.label .nounderline img {
+#learn-page .label .nounderline img {
   height: fit-content;
 }
 
